--- a/templates/patient/patient_profile.html
+++ b/templates/patient/patient_profile.html
@@ -3,88 +3,99 @@
 {% load static %}
 <title>{% block title %}Uniabuja Clinic | Profile {% endblock %}</title>
 {% block content %}
-
-		<!-- START Patient dashboard AREA -->
-		<section class="checkout-area ptb-100">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-12 col-md-12">
-						<div class="user-actions">
-							<h2>Hello, {{ user.first_name }}</h2>
-						</div>
-					</div>
-				</div>
-				<form action="" method="POST" enctype="multipart/form-data">
-					{% csrf_token %}
-					<div class="row">
-						<div class="col-lg-6 col-md-12">
-							<h3 class="title">Patient's Details</h3>
-							<p>
-								Name: {{ user.first_name }}
-							</p>
-						</div>
-
-						<div class="col-lg-6 col-md-12">
-							{% if messages %}
-							  {% for message in messages %}
-								<span class="alert {{ message.tags }} col-lg-6 col-md-12" role="alert">
-									{{ message|safe }}
-								</span>
-							  {% endfor %}
-							{% endif %}
-							<div class="billing-details">
-								<h3 class="title">Update Profile</h3>
+<section class="cart-area ptb-100">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 col-md-12">
+                <div class="row">
+					<div class="col-lg-6">
+                        <div class="cart-totals">
+                            <h3>Patient's Details</h3>
+                            <ul>
+                                <li>Full name <span>{{ user.first_name }} {{ user.last_name }}</span></li>
+                                <li>Reg number <span>{{ user.username }}</span></li>
+                                <li>Email <span>{{ user.email }}</span></li>
+								<li>Card number <span>{{ user.patient.card_number }}</span></li>
+                            </ul>
+                            <a href="#" class="default-btn page-btn">
+                                Change password
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="coupon-wrap">
+                            <div class="shops-form">
 								<div class="row">
 									<div class="col-lg-6">
-										<div class="form-group">
-											Gender {{ profile_form.gender }}
-										</div>
+										<h3>Update Profile</h3>
 									</div>
 									<div class="col-lg-6">
-										<div class="form-group">
-											Age {{ profile_form.age }}
-										</div>
-									</div>
-									<div class="col-lg-6">
-										<div class="form-group">
-											Phone {{ profile_form.phone }}
-										</div>
-									</div>
-									<div class="col-lg-6">
-										<div class="form-group">
-											Department {{ profile_form.department }}
-										</div>
-									</div>
-									<div class="col-lg-6">
-										<div class="form-group">
-											Level {{ profile_form.level }}
-										</div>
-									</div>
-									<div class="col-lg-6">
-										<div class="form-group">
-											Blood Group {{ profile_form.blood_group }}
-										</div>
-									</div>
-									<div class="col-lg-6">
-										<div class="form-group">
-											Genotype {{ profile_form.genotype }}
-										</div>
-									</div>
-									<div class="col-lg-12">
-										<div class="form-group">
-											Address {{ profile_form.address }}
-										</div>
-									</div>
-									<div class="col-lg-12 col-md-12">
-										<button type="submit" class="default-btn">Update Record</button>
+										{% if messages %}
+										  {% for message in messages %}
+											<span class="alert {{ message.tags }} col-lg-6 " role="alert">
+												{{ message|safe }}
+											</span>
+										  {% endfor %}
+										{% endif %}
 									</div>
 								</div>
-							</div>
-						</div>
-					</div>
-				</form>
-			</div>
-		</section>
-		<!-- END Patient dashboard AREA -->
+								<form action="" method="POST" enctype="multipart/form-data">
+									{% csrf_token %}
+									<div class="billing-details">
+										<div class="row">
+											<div class="col-lg-6">
+												<div class="form-group">
+													Gender {{ profile_form.gender }}
+												</div>
+											</div>
+											<div class="col-lg-6">
+												<div class="form-group">
+													Age {{ profile_form.age }}
+												</div>
+											</div>
+											<div class="col-lg-6">
+												<div class="form-group">
+													Phone {{ profile_form.phone }}
+												</div>
+											</div>
+											<div class="col-lg-6">
+												<div class="form-group">
+													Department {{ profile_form.department }}
+												</div>
+											</div>
+											<div class="col-lg-6">
+												<div class="form-group">
+													Level {{ profile_form.level }}
+												</div>
+											</div>
+											<div class="col-lg-6">
+												<div class="form-group">
+													Blood Group {{ profile_form.blood_group }}
+												</div>
+											</div>
+											<div class="col-lg-6">
+												<div class="form-group">
+													Genotype {{ profile_form.genotype }}
+												</div>
+											</div>
+											<div class="col-lg-12">
+												<div class="form-group">
+													Address {{ profile_form.address }}
+												</div>
+											</div>
+											<div class="col-lg-12 col-md-12">
+												<button type="submit" class="default-btn">Update Record</button>
+											</div>
+										</div>
+									</div>
+								</form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 {% endblock %}
