--- a/templates/doctor/appointments.html
+++ b/templates/doctor/appointments.html
@@ -7,15 +7,7 @@
     <div class="container">
         <div class="row">
             <center>
-                <div class="col-lg-12">
-                    {% if messages %}
-                      {% for message in messages %}
-                        <span class="alert {{ message.tags }} col-lg-6 " role="alert">
-                            {{ message|safe }}
-                        </span>
-                      {% endfor %}
-                    {% endif %}
-                </div>
+                {% include "main/_message.html" %}
             </center>
             <div class="col-lg-12 col-md-12">
                 <div class="cart-wraps">
