--- a/templates/doctor/doctor_profile.html
+++ b/templates/doctor/doctor_profile.html
@@ -29,13 +29,7 @@
 										<h3>Update Profile</h3>
 									</div>
 									<div class="col-lg-6">
-										{% if messages %}
-										  {% for message in messages %}
-											<span class="alert {{ message.tags }} col-lg-6 " role="alert">
-												{{ message|safe }}
-											</span>
-										  {% endfor %}
-										{% endif %}
+										{% include "main/_message.html" %}
 									</div>
 								</div>
 								<form action="" method="POST" enctype="multipart/form-data">
