--- a/templates/main/staffs.html
+++ b/templates/main/staffs.html
@@ -22,7 +22,7 @@
 
 
 							<div class="doctor-content">
-								<h3>ABDULKABIR AYANNIYI</h3>
+								<h3>Dr. ABDULKABIR AYANNIYI</h3>
 								<span>MBBS (Ibadan), FMCOph (Nigeria), PGDE (UDUS),
 									MA (Medical Ethics & Law, Keele, UK).<br/>
 									Professor and Head
@@ -512,29 +512,8 @@
 							</div>
 						</div>
 					</div>
-
-
-
-
-
-					<div class="col-lg-12 col-md-12">
-                        <div class="pagination-area text-center">
-                            <a href="#" class="prev page-numbers">
-								<i class="bx bx-chevrons-left"></i>
-							</a>
-                            <a href="#" class="page-numbers active">1</a>
-                            <a href="#" class="page-numbers">2</a>
-                            <a href="#" class="page-numbers">3</a>
-                            <a href="#" class="page-numbers">4</a>
-                            <a href="#" class="next page-numbers">
-								<i class="bx bx-chevrons-right"></i>
-							</a>
-                        </div>
-                    </div>
 				</div>
 			</div>
 		</section>
 		<!-- END DOCTORS AREA -->
-
-
 {% endblock %}
