--- a/templates/doctor/doctor_profile.html
+++ b/templates/doctor/doctor_profile.html
@@ -16,7 +16,7 @@
                                 <li>Email <span>{{ user.email }}</span></li>
 
                             </ul>
-                            <a href="#" class="default-btn page-btn">
+                            <a href="{% url 'main:password_change' %}" class="default-btn page-btn">
                                 Change password
                             </a>
                         </div>
