--- a/templates/main/login.html
+++ b/templates/main/login.html
@@ -42,4 +42,12 @@
 		</section>
 		<!-- END LOG IN AREA -->
 
+<script>
+setTimeout(() => {
+    const alerts = document.querySelectorAll(".alert");
+    alerts.forEach(alert => {
+        alert.style.display = 'none';
+    });
+}, 5000);
+</script>
 {% endblock %}
