--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -1,27 +1,46 @@
-{% extends "base.html" %}
-
-{% block title %}Cheaper | Password changed{% endblock %}
-
+{% extends 'base.html' %}
+{% load bootstrap4 %}
+{% load static %}
+<title>{% block title %}Uniabuja Health Services | Password changed {% endblock %}</title>
 {% block content %}
-<div class="container py-5">
-  <div class="row justify-content-center">
-	<div class="col-lg-5 order-lg-2 mb-4 mb-lg-0 testimonial--wrap"><br/>
-	  <div class="section-title mb-5">
-		  <h3 class="text-center mb-4">
-			 Password changed
-		  </h3>
-		  <hr class="divider"/>
-	  </div>
-	   <p>Your password has been successfully changed.
-	   Redirecting..., or click <a href="{% url 'sellers:profile' %}">here</a> to go back to profile.
-	   </p>
-	</div>
-  </div>
-</div>
+
+		<!-- START LOG IN AREA -->
+		<section class="user-area-style log-in-area ptb-100"><br/>
+			<div class="container">
+				<div class="contact-form-action">
+					<div class="section-title">
+						<h2>Password changed!</h2>
+						<p>
+							Your password has been successfully changed.
+							{% if request.user.doctor %}
+								Click <a href="{% url 'doctor:profile' %}"><b>here</b></a> to go back to profile.
+							{% else %}
+								Click <a href="{% url 'patient:profile' %}"><b>here</b></a> to go back to profile.
+							{% endif %}
+	  					 </p>
+					</div>
+					<center>
+						<div class="row">
+							{% if messages %}
+							  {% for message in messages %}
+								<span class="alert {{ message.tags }} col-lg-12 " role="alert">
+									{{ message|safe }}
+								</span>
+							  {% endfor %}
+							{% endif %}
+						</div>
+					</center>
+				</div>
+			</div>
+		</section>
+		<!-- END LOG IN AREA -->
 
 <script>
-setTimeout(function(){
-     window.location.href = "{% url 'sellers:profile' %}";
-}, 3000);
+setTimeout(() => {
+    const alerts = document.querySelectorAll(".alert");
+    alerts.forEach(alert => {
+        alert.style.display = 'none';
+    });
+}, 5000);
 </script>
 {% endblock %}
