--- a/templates/doctor/edit_appointment.html
+++ b/templates/doctor/edit_appointment.html
@@ -22,7 +22,7 @@
 							</div>
 							<div class="col-12">
 								<button class="default-btn btn-two" type="submit">
-									Book appointment
+									Save appointment
 								</button>
 							</div>
 						</div>
