--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -1,50 +1,52 @@
 {% extends 'base.html' %}
 {% load bootstrap4 %}
 {% load static %}
-{% block title %}Cheaper | Change Password{% endblock %}
-
+<title>{% block title %}Uniabuja Health Services | Change password {% endblock %}</title>
 {% block content %}
 
-<div class="container py-5">
-  <div class="row justify-content-center">
-	<div class="col-lg-5 order-lg-2 mb-4 mb-lg-0 testimonial--wrap"><br/>
-	  <div class="section-title mb-5">
-		  <h3 class="text-center mb-4">
-			  Change your password
-		  </h3>
-		  <hr class="divider"/>
-	  </div>
-	  <form class="contact-form" method="post">
-		  {% csrf_token %}
-		<div class="form-group">
-		  {% bootstrap_form form %}
-			<span class="icon-eye field-icon" id="togglePassword" ></span>
-		</div>
-		<center>
-			<button type="submit" class="btn btn-primary btn-sm">Save changes</button>
-		</center>
-
-	  </form>
-	</div>
-  </div>
-</div>
+		<!-- START LOG IN AREA -->
+		<section class="user-area-style log-in-area ptb-100"><br/>
+			<div class="container">
+				<div class="contact-form-action">
+					<div class="section-title">
+						<h2>Change your password!</h2>
+						<p>change your password with the form below</p>
+					</div>
+					<center>
+						<div class="row">
+							{% if messages %}
+							  {% for message in messages %}
+								<span class="alert {{ message.tags }} col-lg-12 " role="alert">
+									{{ message|safe }}
+								</span>
+							  {% endfor %}
+							{% endif %}
+						</div>
+					</center>
+					<form method="post" action="">
+						{% csrf_token %}
+						<div class="row">
+							<div class="form-group">
+								{% bootstrap_form form %}
+							</div>
+							<div class="col-12">
+								<button class="default-btn btn-two" type="submit">
+									Change password
+								</button>
+							</div>
+						</div>
+					</form>
+				</div>
+			</div>
+		</section>
+		<!-- END LOG IN AREA -->
 
 <script>
-const togglePassword = document.querySelector("#togglePassword");
-const old_password = document.querySelector("#id_old_password");
-const new_password1 = document.querySelector("#id_new_password1");
-const new_password2 = document.querySelector("#id_new_password2");
-
-togglePassword.addEventListener("click", function () {
-	// toggle the type attribute
-	const type = old_password.getAttribute("type") === "password" ? "text" : "password";
-	const type2 = new_password1.getAttribute("type") === "password" ? "text" : "password";
-	const type3 = new_password2.getAttribute("type") === "password" ? "text" : "password";
-	old_password.setAttribute("type", type);
-	new_password1.setAttribute("type", type2);
-	new_password2.setAttribute("type", type3);
-	// toggle the icon
-	this.classList.toggle("icon-eye-slash");
-});
+setTimeout(() => {
+    const alerts = document.querySelectorAll(".alert");
+    alerts.forEach(alert => {
+        alert.style.display = 'none';
+    });
+}, 5000);
 </script>
 {% endblock %}
