--- a/templates/blog/author_post_list.html
+++ b/templates/blog/author_post_list.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load blog_tags %}
 {% load static %}
 <title>{% block title %}Uniabuja Health Services | All Posts {% endblock %}</title>
 {% block content %}
@@ -40,7 +41,7 @@
 									<h3>{{ post.title }}</h3>
 								</a>
 								<p>
-									{{ post.body|truncatechars:200 }}
+									{{ post.body|markdown|truncatewords:20 }}
 								</p>
 
 								<a href="{% url 'blog:edit_post' post.slug post.id %}" class="read-more">
