--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load blog_tags %}
 {% load static %}
 <title>{% block title %}Uniabuja Health Services | {{ post.title }} {% endblock %}</title>
 {% block content %}
@@ -21,7 +22,7 @@
 
 						<h3>{{ post.title|title }}</h3>
 						<p>
-							{{ post.body }}
+							{{ post.body|markdown }}
 						</p>
 					</div>
 				</div>
