--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load blog_tags %}
 {% load static %}
 <title>{% block title %}Uniabuja Health Services | Blog {% endblock %}</title>
 {% block content %}
@@ -33,7 +34,7 @@
 									<h3>{{ post.title }}</h3>
 								</a>
 								<p>
-									{{ post.body|truncatechars:200 }}
+									{{ post.body|markdown|truncatewords:20 }}
 								</p>
 
 								<a href="{{ post.get_absolute_url }}" class="read-more">
